# maxwell

./: .gitignore  CMakeLists.txt  LICENSE  README.md  builder.sh  convergence.py  convergence_results.p  eddy_current_mag_vec_pot.py  fenics_tut_prob.py  iterations.py  main.cpp  man_sol.py  maxwell.py  maxwell.ufl  plot_convergence.py  plot_iterations.py  problems.py  pyproject.toml  skin_effect.py  solver.py  tpetra_util.h  util.py  wire_prob.py
.github/: testing.yml
.github/workflows/: testing.yml
cpp/: Belos.xml  CMakeLists.txt  README.md  builder.sh  lumping.h  magnetostatic.ufl  main.cpp  maxwell.py  maxwell.ufl  maxwell_solver_settings.xml  tpetra_util.h
jin/: meshes.py  postprocessing.py  problems.py  solver.py  test_solver.py
nedelec/: convergence.py  man_sol.py  plot_convergence.py  problems.py  solver.py  solver_conducting.py  util.py
